--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@ a:visited {
 @media only screen and (max-width: 900px){
 
     #index {
-        background-color: #81817d;
+        /* background-color: #81817d; */
     }
 
     .flex-list {
@@ -181,7 +181,7 @@ a:visited {
 @media only screen and (max-width: 500px){
 
     #index {
-        background-color: #dfa18d;
+        /* background-color: #dfa18d; */
     }
     .flex-list {
         display: none;
@@ -223,7 +223,7 @@ a:visited {
 @media only screen and (max-width: 300px){
 
     #index {
-        background-color: #62b46d;
+        /* background-color: #62b46d; */
     }
 
     .main-page-title {
