--- a/styleCeremony.css
+++ b/styleCeremony.css
@@ -8,13 +8,24 @@
     
 }
 
-#body-text {
-   
+#backimage {
+        float: left;
 }
+
+img {
+    width: 50px;
+    margin-left: 1%;
+}
+
+img:hover {
+    cursor: pointer;
+}
+
 
 .inverted-title {
     background-color: #5f9ea0;
     padding: .2% 0;
+    margin-bottom: 0;
     /* box-shadow: 0px 5px 10px #000000; */
 }
 
@@ -37,7 +48,8 @@
     text-align: center;
     font-family: 'Abril Fatface', cursive;
     
-    margin-top: 8%;
+    margin-top: 50px;
+    margin-right: 8%;
     font-size: 40px;
 }
 
@@ -120,7 +132,7 @@ button:hover {
 #questions {
     background-color: #5f9ea0;
     padding: 1% 0;
-    margin: 450px 0 0 0;
+    margin: 200px 0 0 0;
     text-align: center;
     font-size: 20px;
 }
@@ -134,6 +146,29 @@ button:hover {
     text-decoration: underline #5f9ea0 solid 5px;
     color: #81817d;  
     cursor: pointer; 
+}
+
+
+@media only screen and (min-width: 750px){
+
+    
+
+    #questions {  
+        font-size: 12px;
+        margin: 450px 0 0 0;
+    }
+
+}
+
+@media only screen and (min-width: 750px){
+
+    
+
+    #questions {  
+        font-size: 12px;
+        margin: 600px 0 0 0;
+    }
+
 }
 
 @media only screen and (max-width: 500px){
