--- a/registryStyle.css
+++ b/registryStyle.css
@@ -1,22 +1,474 @@
-img {
-    width: 50px;
-    margin-top: 5%;
-    margin-left: 3%;
+
+#registry {
+    background-color:#f8f5f1;
+    width:100%;
+    margin: 0 auto;
+    min-width: 250;
+    
 }
+
+#backimage {
+        display: block;
+        position: fixed;
+        top: 0;
+        left:0;
+        display: block;
+        float:right;
+        margin-top: 30px;
+        margin-left: 30px;
+        cursor: pointer;
+        width: 50px;
+}
+
 
 img:hover {
     cursor: pointer;
 }
 
 
-h1 {
+.inverted-title {
+    background-color: #5f9ea0;
+    padding: .2% 0;
+    margin-bottom: 0;
+    box-shadow: 0px 5px 10px #2d4849;
+}
+
+#header-registry {
+    font-family: 'Abril Fatface', cursive;
+    color: #fcf2e6;
+    text-align: right;
+    padding-top: 0;
+    padding-right: 5%;
+    font-size: 45px;
+}
+
+
+#registry-title {
     text-align: center;
     font-family: 'Abril Fatface', cursive;
-    margin: 20%;
+    margin-top: 50px auto;
     font-size: 50px;
+}
+
+
+
+a:link {
+    text-decoration: none;
+    color: #000;
+    
+}
+
+a:visited {
+    text-decoration: none;
+    color: #000;
+    
+}
+
+a:hover {
+    /* transition: ease-in-out .5s; */
+    text-decoration: underline #5f9ea0 solid 5px;
+    color: #81817d;  
+    cursor: pointer; 
+}
+
+
+#body-text {
+    width: 90%;
+    
+    margin: auto;
+    text-align: center;
+    /* border-left: #5f9ea0 solid 5px;
+    border-right: #5f9ea0 solid 5px; */
+    height: 100%;
+}
+
+.main-box {
+    width: 900px;
+    margin: auto;
+    
+}
+
+.description-info {
+    font-size: 22px;
+    font-family: 'Playfair Display', serif;
+    width: 400px;
+    margin: 50px auto;
+}
+
+.option-boxes {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    /* justify-content: center;
+    align-items: center; */
+    margin: 40px;
+    /* background-color: cyan; */
+}
+
+.support-gift {
+    font-family: 'Abril Fatface', cursive;
+    font-size: 40px;
+    letter-spacing: 1.5px;
+    margin-bottom: 100px;
+    border-top: #5f9ea0 solid 5px;
+    border-bottom: #5f9ea0 solid 5px;
+    padding: 2%;
+    background-color: #5f9ea0;
+    box-shadow: 0px 5px 10px rgb(82, 109, 109);
     color: #fff;
 }
 
-body {
-    background-color:rgb(97, 187, 137);
+.title-option-box {
+    margin: auto;
+    
+    width: 350px;
+    height: 225px;
+
+}
+
+.title-option-box:hover {
+    /* background-color:darkgray;
+    border-radius: 5px; */
+
+}
+
+.option-title {
+    font-family: 'Abril Fatface', cursive;
+    font-size: 40px;
+    margin-top: 75px;
+
+}
+
+.gif-image {
+    width: 350px;
+    border-radius: 5px;
+}
+
+
+
+#questions {
+    background-color: #5f9ea0;
+    padding: 1% 0;
+    margin: 100px 0 0 0;
+    text-align: center;
+    font-size: 20px;
+}
+
+#email-signoff {
+    color: #fcf2e6;
+}
+
+#email-signoff:hover {
+    /* transition: ease-in-out .5s; */
+    text-decoration: underline #5f9ea0 solid 5px;
+    color: #81817d;  
+    cursor: pointer; 
+}
+
+#thankyou-message {
+    font-family: 'Abril Fatface', cursive;
+    text-align: center;
+    margin-top: 200px;
+    font-size: 40px;
+    color: #5f9ea0;
+    text-shadow: 5px 0px 10px #c9ecff;
+}
+
+.small-mobile {
+    display:none;
+}
+
+.desktop-view {
+    display:block;
+}
+
+
+
+
+/* THIS IS THE MODAL TO OPEN FOR PAYPAL */
+
+#userbutton:hover {
+    background-color: #645f5f;
+    color: #fff;
+}
+
+.modal-bold {
+    font-family: 'Abril Fatface', cursive;
+    font-size: 45px;
+}
+
+#modal-para {
+    font-size: 25px;
+}
+
+.sideModal {
+    display: none;
+    position: fixed; /* Stay in place */
+      z-index: 1; /* Sit on top */
+      padding-top: 20px; /* Location of the box */
+      left: 0;
+      top: 0;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      overflow: auto; /* Enable scroll if needed */
+      background-color: #000000; /* Fallback color */
+      background-color: #00000066;
+      /* min-width: 850px; */
+    }
+    
+    .modal-content-right {
+    background-color: #fefefe;
+    font-family: 'Playfair Display', serif;
+      margin: auto;
+      padding: 10px 40px;
+      /* padding: 20px; */
+      /* border: 1px solid #888; */
+      width: 60%;
+      /* height: 45%; */
+      border-radius: 5px;
+    }
+    
+    #close-right-modal {
+        margin-top: 20px;
+        border-radius: 5px;
+        border: none;
+        font-family: 'Abril Fatface', cursive;
+        letter-spacing: 1.5px;
+        font-size: 25px;
+        padding: 15px 25px;
+        background-color: #5f9ea0;
+        color: #fff;
+    }
+    
+    #close-right-modal:hover,
+    #close-right-modal:focus {
+      color: #5f9ea0;
+      background-color: #fff;
+      cursor: pointer;
+    }
+
+   
+    
+
+
+
+
+/* @media only screen and (min-width: 700px){
+
+    #registry {
+        background-color: #e2b06f;
+    }
+
+    
+
+    
+
+    #questions {  
+        font-size: 12px;
+        margin: 450px 0 0 0;
+    }
+
+} */
+
+@media only screen and (max-width: 850px){
+
+    #registry {
+        /* background-color: rgb(221, 223, 119); */
+    }
+
+    .main-box {
+        width: 650px;
+        margin: auto;
+    }
+
+    #backimage {
+        margin-top: 20px;
+        margin-left: 10px;
+        width: 45px;
+    }
+
+    .main-box {
+        width: 800px;
+        margin: auto;
+        
+    }
+
+    .title-option-box {
+        margin: auto;
+        width: 350px;
+        height: 225px;
+    
+    }
+    
+    .title-option-box:hover {
+        background-color:darkgray;
+        border-radius: 5px;
+    
+    }
+    
+    .option-title {
+        font-family: 'Abril Fatface', cursive;
+        font-size: 40px;
+        margin-top: 75px;
+    
+    }
+
+    .gif-image {
+        width: 250px;
+        border-radius: 5px;
+    }
+
+    #questions {  
+        font-size: 12px;
+        margin: 600px 0 0 0;
+    }
+
+}
+@media only screen and (max-width: 700px){
+
+    #registry {
+        /* background-color: darkgreen; */
+    }
+
+    .main-box {
+        /* background-color: darkkhaki; */
+        width: 550px;
+        margin: auto;
+        
+    }
+
+    .description-info {
+        font-size: 22px;
+        font-family: 'Playfair Display', serif;
+        width: 85%;
+        margin: 50px auto;
+    }
+
+    .gif-image {
+        width: 90%;
+        border-radius: 5px;
+        margin: 5px auto;
+    }
+
+    .title-option-box {
+        margin: 10px auto;
+
+        height: 50px;
+        
+        /* width: 350px;
+        height: 225px; */
+    
+    }
+
+    .small-mobile {
+        display:block;
+    }
+
+    .desktop-view {
+        display:none;
+    }
+    
+    
+    .option-title {
+        font-family: 'Abril Fatface', cursive;
+        font-size: 40px;
+        margin-top: 15px;
+    
+    }
+
+
+
+    .option-boxes {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 2fr;
+        /* justify-content: center;
+        align-items: center; */
+        /* margin: 40px; */
+        /* background-color: cyan; */
+    }
+
+
+}
+
+@media only screen and (max-width: 450px){
+    #registry {
+        /* background-color: darksalmon; */
+    }
+
+    .main-box {
+        width: 90%;
+        margin: auto;
+    
+    }
+
+    .title-option-box {
+        margin: auto;
+        
+        width: 200px;
+        height: 180px;
+    
+    }
+
+    .option-boxes {
+        margin: auto;
+        /* background-color: cyan; */
+    }
+}
+
+@media only screen and (max-width: 300px){
+
+    #registry {
+        background-color: darkmagenta;
+    }
+
+    .main-box {
+        width: 250px;
+        margin: auto;
+    
+    }
+
+
+
+    .option-boxes {
+        width: 250px;
+        margin: auto;
+        /* background-color: cyan; */
+    }
+
+    .title-option-box {
+        margin: auto;
+        
+        width: 200px;
+        height: 125px;
+    
+    }
+    
+    
+    .option-title {
+        font-family: 'Abril Fatface', cursive;
+        font-size: 40px;
+        margin-top: 10px;
+    
+    }
+    
+    .gif-image {
+        width: 100%;
+        border-radius: 5px;
+    }
+
+
+
+    #questions {  
+        font-size: 12px;
+        margin: 150px 0 0 0;
+    }
+
+    #backimage {
+
+        margin-top: 5%;
+        margin-left: 1%;
+        width: 50px;
+    }
+
 }
