--- a/styleCeremony.css
+++ b/styleCeremony.css
@@ -9,7 +9,16 @@
 }
 
 #backimage {
-        float: left;
+        display: block;
+        position: fixed;
+        top: 0;
+        left:0;
+        display: block;
+        float:right;
+        margin-top: 30px;
+        margin-left: 30px;
+        cursor: pointer;
+        width: 50px;
 }
 
 img {
@@ -47,9 +56,7 @@ img:hover {
 #cere-title {
     text-align: center;
     font-family: 'Abril Fatface', cursive;
-    
-    margin-top: 50px;
-    margin-right: 8%;
+    margin-top: 50px auto;
     font-size: 40px;
 }
 
@@ -132,7 +139,7 @@ button:hover {
 #questions {
     background-color: #5f9ea0;
     padding: 1% 0;
-    margin: 200px 0 0 0;
+    margin: 350px 0 0 0;
     text-align: center;
     font-size: 20px;
 }
@@ -149,7 +156,21 @@ button:hover {
 }
 
 
-@media only screen and (min-width: 750px){
+
+
+
+@media only screen and (max-width: 900px){
+
+    #ceremony {
+        /* background-color: #e2b06f; */
+    }
+
+    #backimage {
+
+        margin-top: 30px;
+        margin-left: 50px%;
+        width: 50px;
+    }
 
     
 
@@ -160,9 +181,18 @@ button:hover {
 
 }
 
-@media only screen and (min-width: 750px){
+@media only screen and (max-width: 750px){
 
-    
+    #ceremony {
+        /* background-color: #6fe282; */
+    }
+
+    #backimage {
+
+        margin-top: 30px;
+        margin-left: 50px%;
+        width: 50px;
+    }
 
     #questions {  
         font-size: 12px;
@@ -173,8 +203,17 @@ button:hover {
 
 @media only screen and (max-width: 500px){
 
+    #ceremony {
+        /* background-color: #c97339; */
+    }
+
     #the-info {
         width: 85%;
+        margin: auto;
+    }
+
+    #body-text {
+        width: 80%;
         margin: auto;
     }
 
@@ -194,6 +233,13 @@ button:hover {
     #questions {  
         font-size: 12px;
         margin: 150px 0 0 0;
+    }
+
+    #backimage {
+
+        margin-top: 5%;
+        margin-left: 1%;
+        width: 50px;
     }
 
 }
