--- a/styles.css
+++ b/styles.css
@@ -375,7 +375,7 @@ a:visited {
     }
 
     .main-page-title {
-        font-size: 40px;
+        font-size: 35px;
 
 
     }
@@ -388,6 +388,7 @@ a:visited {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
+        width: 90%;
         margin: 50px auto;
     }
 
