--- a/styles.css
+++ b/styles.css
@@ -242,6 +242,11 @@ a:visited {
         /* background-color: #dfa18d; */
     }
 
+    .main-page-title {
+        font-size: 35px;
+        letter-spacing: 1px;
+    }
+
     .flex-list {
         display: none;
     }
@@ -371,7 +376,7 @@ a:visited {
 @media only screen and (max-width: 300px){
 
     #index {
-        background-color: #62b46d;
+        /* background-color: #62b46d; */
     }
 
     .main-page-title {
