--- a/faqsStyle.css
+++ b/faqsStyle.css
@@ -1,22 +1,188 @@
-img {
-    width: 50px;
-    margin-top: 5%;
-    margin-left: 3%;
+#faqs {
+    /* background-color:#f8f5f1; */
+    width:100%;
+    margin: 0 auto;
+    min-width: 250;
+    
 }
 
 img:hover {
     cursor: pointer;
 }
 
-
-h1 {
-    text-align: center;
-    font-family: 'Abril Fatface', cursive;
-    margin: 20%;
-    font-size: 50px;
-    color: #fff;
+#backimage {
+    display: block;
+    position: fixed;
+    top: 0;
+    left:0;
+    display: block;
+    float:right;
+    margin-top: 30px;
+    margin-left: 30px;
+    cursor: pointer;
+    width: 50px;
 }
 
-body {
-    background-color:#e9967a;
+
+img:hover {
+cursor: pointer;
+}
+
+.inverted-title {
+    background-color: #5f9ea0;
+    padding: .2% 0;
+    margin-bottom: 0;
+    box-shadow: 0px 5px 10px #2d4849;
+}
+
+
+#header-faqs {
+    font-family: 'Abril Fatface', cursive;
+    color: #fcf2e6;
+    text-align: right;
+    padding-top: 0;
+    padding-right: 5%;
+    font-size: 45px;
+}
+
+#mainbody {
+    width:70%;
+    margin: auto;
+}
+
+.faq-title-header {
+    font-family: 'Abril Fatface', cursive;
+    font-size: 45px;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+
+}
+
+.header-questions {
+    font-family: 'Abril Fatface', cursive;
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+
+.para-answers {
+    font-family: 'Playfair Display', serif;
+    font-size: 20px;
+    margin-bottom: 50px;
+}
+
+a {
+    color: #5f9ea0;
+    cursor: pointer;
+}
+
+a:link {
+    text-decoration: none;
+    color: #5f9ea0;
+    
+}
+
+a:visited {
+    text-decoration: none;
+    color: #5f9ea0;
+    
+}
+
+a:hover {
+    /* transition: ease-in-out .5s; */
+    text-decoration: underline #5f9ea0 solid 5px;
+    color: #81817d;
+    
+}
+
+
+#questions {
+    background-color: #5f9ea0;
+    padding: 1% 0;
+    margin: 300px 0 0 0;
+    text-align: center;
+    font-size: 20px;
+}
+
+#email-signoff {
+    color: #fcf2e6;
+}
+
+#email-signoff:hover {
+    /* transition: ease-in-out .5s; */
+    text-decoration: underline #5f9ea0 solid 5px;
+    color: #81817d;  
+    cursor: pointer; 
+}
+
+@media only screen and (max-width: 600px){
+
+    #faqs {
+        /* background-color:burlywood; */
+    }
+
+    #mainbody {
+        width: 80%;
+        margin: auto;
+    }
+
+    #backimage {
+        display: block;
+        position: fixed;
+        top: 0;
+        left:0;
+        display: block;
+        float:right;
+        margin-top: 20px;
+        margin-left: 20px;
+        cursor: pointer;
+        width: 50px;
+    }
+
+}
+
+@media only screen and (max-width: 450px){
+
+    #faqs {
+        /* background-color: chocolate; */
+    }
+
+    .header-questions {
+        text-align: center;
+    }
+    
+    .para-answers {
+        text-align: center;
+    }
+
+    #questions {
+        background-color: #5f9ea0;
+        padding: 2% 0;
+        margin: 300px 0 0 0;
+        text-align: center;
+        font-size: 15px;
+    }
+
+
+}
+
+@media only screen and (max-width: 300px){
+
+    #faqs {
+        /* background-color:rgb(148, 223, 158); */
+    }
+
+    #mainbody {
+        width: 90%;
+        margin: auto;
+    }
+
+    #backimage {
+        
+        margin-top: 10px;
+        margin-left: 10px;
+        width: 40px;
+    }
+
+
 }
