--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@
 }
 
 .nav-list-items {
+    /* font-family: 'Quicksand', sans-serif; */
     font-size: 25px;
 }
 
@@ -95,6 +96,7 @@ a:visited {
 }
 
 .ourstory {
+    /* font-family: 'Quicksand', sans-serif; */
     text-align: center;
     font-size: 20px;
     line-height: 30px;
